--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,21 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <script type="module" defer src="./js/main.js"></script>
+    <script type="module" defer src="./main.js"></script>
     <script type="module" defer src="./js/pixabay-api.js"></script>
     <script type="module" defer src="./js/render-functions.js"></script>
   </head>
-  <body></body>
+  <body>
+    <form class="search-form">
+      <input
+        class="search-input"
+        type="text"
+        name="text"
+        placeholder="Search images..."
+      />
+      <button class="search-button" type="submit">Search</button>
+    </form>
+
+    <div class="pictures"></div>
+  </body>
 </html>
