--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <script type="module" defer src="./main.js"></script>
-    <script type="module" defer src="./js/pixabay-api.js"></script>
-    <script type="module" defer src="./js/render-functions.js"></script>
+    <!-- <script type="module" defer src="./js/pixabay-api.js"></script>
+    <script type="module" defer src="./js/render-functions.js"></script> -->
   </head>
   <body>
     <form class="search-form">
